<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_dark"
    android:focusable="false"
    android:orientation="horizontal"
    android:noHistory="true"
    tools:context=".activity.MainActivity"
    tools:deviceIds="tv"
    tools:ignore="MergeRootFrame">

    <ImageView
        android:id="@+id/darkblockIcon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/darkblock_symbol"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/darkblockLogoName"
        android:layout_width="150dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:gravity="center_vertical"
        android:text="@string/browse_title"
        android:textAlignment="viewStart"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/darkblockIcon"
        app:layout_constraintStart_toEndOf="@+id/darkblockIcon"
        app:layout_constraintTop_toTopOf="@+id/darkblockIcon" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avantgardestd"
            android:text="@string/welcome_1"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/avantgardestd_bold"
            android:text="@string/signin_url"
            android:textAlignment="center"
            android:textColor="@color/accent_green"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/avantgardestd"
            android:text="@string/welcome_2"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/signInCodeDisplay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/primary_blue"
            android:fontFamily="@font/avantgardestd_bold"
            android:gravity="center_vertical"
            android:padding="16dp"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="0 0 0 - 0 0 0"
            android:textColor="@color/white"
            android:textSize="96sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>